--- a/.env
+++ b/.env
@@ -1,3 +1,15 @@
-GOCD_AGENT_IMAGE=gocd/gocd-agent-alpine-3.5
+# Specify GoCD version
 GOCD_VERSION=v17.10.0
 
+# Available GoCD Server configuration options
+GO_SERVER_SYSTEM_PROPERTIES=-Dfoo=bar
+
+# Available GoCD Agent configuration options
+GOCD_AGENT_IMAGE=gocd/gocd-agent-alpine-3.5
+
+GO_AGENT_SYSTEM_PROPERTIES=-Dfoo=bar
+
+AGENT_AUTO_REGISTER_KEY=bc98f38b-0545-42eb-bea1-ab521a4991d7
+AGENT_AUTO_REGISTER_HOSTNAME=in.go-agent
+AGENT_AUTO_REGISTER_RESOURCES=Chrome,Java,Windows
+AGENT_AUTO_REGISTER_ENVIRONMENTS=Dev,QA 
