Minor tweaks to docker compose configuration

--- a/.env
+++ b/.env
@@ -2,14 +2,16 @@
 GOCD_VERSION=v17.10.0
 
 # Available GoCD Server configuration options
-GO_SERVER_SYSTEM_PROPERTIES=-Dfoo=bar
+GO_SERVER_SYSTEM_PROPERTIES=-Dgo.periodic.gc=true
+SERVER_GO_DATA_PATH=./godata
+SERVER_HOME_GO_PATH=./home/go
 
 # Available GoCD Agent configuration options
 GOCD_AGENT_IMAGE=gocd/gocd-agent-alpine-3.5
 
-GO_AGENT_SYSTEM_PROPERTIES=-Dfoo=bar
+GO_AGENT_SYSTEM_PROPERTIES=-Dgo.periodic.gc=true
 
 AGENT_AUTO_REGISTER_KEY=bc98f38b-0545-42eb-bea1-ab521a4991d7
 AGENT_AUTO_REGISTER_HOSTNAME=in.go-agent
 AGENT_AUTO_REGISTER_RESOURCES=Chrome,Java,Windows
-AGENT_AUTO_REGISTER_ENVIRONMENTS=Dev,QA 
+AGENT_AUTO_REGISTER_ENVIRONMENTS=Dev,QA
