Allow configuring GoCD server HTTP and HTTPS ports

--- a/.env
+++ b/.env
@@ -2,6 +2,8 @@
 GOCD_VERSION=v17.10.0
 
 # Available GoCD Server configuration options
+GO_SERVER_HTTP_PORT=8153
+GO_SERVER_HTTPS_PORT=8154
 GO_SERVER_SYSTEM_PROPERTIES=-Dgo.periodic.gc=true
 SERVER_GO_DATA_PATH=./godata
 SERVER_HOME_GO_PATH=./home/go
