--- a/agent/ubuntu-16.04.yml
+++ b/agent/ubuntu-16.04.yml
@@ -5,7 +5,7 @@ services:
     links:
       - gocd-server
     environment:
-      - GO_SERVER_URL="https://gocd-server:8154/go"
+      - GO_SERVER_URL="https://gocd-server:${GO_SERVER_HTTPS_PORT}/go"
     env_file:
       - .env
       - env/gocd-agent-ubuntu-16.04.env
