generic agent compose file

--- a/.env
+++ b/.env
@@ -9,6 +9,7 @@ SERVER_GO_DATA_PATH=./godata
 SERVER_HOME_GO_PATH=./home/go
 
 # Available GoCD Agent configuration options
+GOCD_AGENT_IMAGE_REPOSITORY=gocd/gocd-agent-ubuntu-16.04
 GO_AGENT_SYSTEM_PROPERTIES=-Dgo.periodic.gc=true
 
 AGENT_AUTO_REGISTER_KEY=c58264ff-d884-4777-9543-5ef698d18899
