--- a/agent/build.agent.yml
+++ b/agent/build.agent.yml
@@ -1,6 +1,6 @@
 version: "2.1"
 services:
-  gocd-agent-alpine-3.5:
+  build_agent:
     image: "${GOCD_AGENT_IMAGE_REPOSITORY}:${GOCD_VERSION}"
     links:
       - gocd-server
