optionally provide a way to mount volumes for GoCD server and agent

--- a/.env
+++ b/.env
@@ -16,3 +16,5 @@ AGENT_AUTO_REGISTER_KEY=c58264ff-d884-4777-9543-5ef698d18899
 AGENT_AUTO_REGISTER_HOSTNAME=in.go-agent
 AGENT_AUTO_REGISTER_RESOURCES=Chrome,Java,Windows
 AGENT_AUTO_REGISTER_ENVIRONMENTS=Dev,QA
+AGENT_GO_DATA_PATH=./godata
+AGENT_HOME_GO_PATH=./home/go
